# proc-mem-inject

./: .gitignore  ACHIEVEMENT.md  CMakeLists.txt  GITHUB_ACTIONS_GUIDE.md  GIT_PUSH_GUIDE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  README_KERNEL.md  UPGRADE_PLAN.md  build.bat  build.sh  push_to_github.sh  stealth_mem  使用教程.md
.github/workflows/: build.yml
scripts/: dnf.sh  wzry.patch
src/: kernel_main.cpp  kernel_memory_injector.cpp  kernel_memory_injector.h  main.cpp  memory_injector.cpp
src/include/: anti_detect.h  memory_injector.h  patch_manager.h
src/rwprocmem33/: rwprocmem33_wrapper.h
